Fixed things that changing the z-index broke

--- a/style/Home.css
+++ b/style/Home.css
@@ -169,6 +169,8 @@ a:hover{
 	margin-top: -2.5%;
     height: 105%;
 	z-index: -1;
+	filter: brightness(50%);
+	-webkit-filter: brightness(50%);
 }
 
 .img_category p {
@@ -178,11 +180,11 @@ a:hover{
 	color: #fafafa;
 	font-family: sans-serif;
 	font-size: 22px;
+	z-index: -1;
 }
 
 .list_category_hover {
 	position: absolute;
-	background-color: rgba(0,0,0,0.5);
 	width: 100%;
 	height: 100%;
 	border-radius: 3%;
@@ -190,9 +192,8 @@ a:hover{
 }
 
 .list_category_hover:hover ~ .img_cat {
-	-webkit-filter: blur(3px);
-	filter: blur(3px);
-	opacity: 0.8;
+	-webkit-filter: blur(3px) brightness(80%);;
+	filter: blur(3px) brightness(80%);
 }
 
 .list_category_hover:hover {
